--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 #homeCarousel .carousel-item img{
   height: 100%;
   width: 100%;
-  object-fit: cover;          
+  object-fit: contain;          
   object-position: center;
 }
 
