--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 /* Configuracion del footer*/
+@font-face {
+  font-family: "BebasNeue-Regular";
+  src: url("../fonts/BebasNeue-Regular.ttf");
+  font-style: normal;
+  font-weight: 400;
+  font-size: medium;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -9,6 +17,111 @@ main {
   flex-grow: 1;
 }
 
+.navR {
+  border-bottom: 1px solid black;
+  a {
+    color: black;
+    text-decoration: none;
+    font-family: BebasNeue-Regular, Arial, sans-serif;
+    font-weight: bold;
+    font-size: x-large;
+    &:hover {
+      color: rgb(192, 1, 1);
+      transition: 800ms;
+    }
+  }
+  ul {
+    list-style: none;
+    padding-left: 0 !important;
+    margin-bottom: 0 !important;
+  }
+  li {
+    cursor: pointer;
+  }
+  button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+    font-family: BebasNeue-Regular, Arial, sans-serif;
+    font-weight: bold;
+    font-size: x-large;
+    &:hover {
+      color: rgb(192, 1, 1);
+      transition: 800ms;
+    }
+  }
+}
+.envios {
+  background-color: black;
+  padding: 7px 0px 0px 0px;
+  h5 {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-family: BebasNeue-Regular, Arial, sans-serif;
+    font-weight: normal;
+    font-size: large;
+  }
+}
+.icon {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: x-large;
+  margin-top: 0.4em;
+}
+.navImg {
+  width: 4em;
+  margin-top: 0.5em;
+}
+.nav-cont {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+  gap: 5px;
+}
+.items {
+  &:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  &:nth-child(9) {
+    grid-column: 12/13;
+    grid-row: 1/2;
+    margin-top: 0.3em;
+  }
+  &:nth-child(2) {
+    grid-column: 8/9;
+    grid-row: 1/2;
+  }
+  &:nth-child(3) {
+    grid-column: 10/11;
+    grid-row: 1/2;
+  }
+}
+.buscar {
+  width: 100%;
+  height: 2em;
+}
+.contP a {
+  display: inline-block;
+  color: white;
+  padding: 12px 16px;
+}
+.product .contP {
+  display: none;
+  position: absolute;
+  left: 0;
+  margin-top: -0.4em;
+  text-align: center;
+  z-index: 1;
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+}
+.product:hover .contP {
+  display: block;
+}
 .contenedor-maps {
   width: 100px;
   height: 150px;
@@ -87,5 +200,160 @@ main {
 @media (min-width: 992px) {
   .cat-card {
     aspect-ratio: 16/8;
+  }
+}
+
+@media (768px <= width <= 991px) {
+  .navImg {
+    width: 5em;
+    height: 1.4em;
+    margin-top: 0.8em;
+  }
+  .nav-cont {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
+  }
+  .icon {
+    font-size: xx-large;
+  }
+  .items {
+    &:nth-child(1) {
+      grid-column: 1/-12;
+      grid-row: 2/3;
+    }
+    &:nth-child(2) {
+      grid-column: 10/11;
+      grid-row: 2/3;
+    }
+    &:nth-child(3) {
+      grid-column: 11/12;
+      grid-row: 2/3;
+    }
+    &:nth-child(9) {
+      grid-column: 12/13;
+      grid-row: 2/3;
+      margin-top: 0.8em;
+    }
+  }
+}
+
+@media (992px <= width <= 1199px) {
+  .navImg {
+    width: 7em;
+    height: 3em;
+  }
+  .icon {
+    display: inline-block;
+    font-size: x-large;
+    vertical-align: middle;
+  }
+  .supItems {
+    a,
+    button {
+      color: rgb(146, 145, 145);
+      font-size: medium;
+    }
+  }
+  .nav-cont {
+    display: grid;
+    grid-template-columns: repeat(24, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .items {
+    &:nth-child(1) {
+      grid-column: -25/-20;
+      grid-row: 1/3;
+    }
+    &:nth-child(2) {
+      grid-column: 19/22;
+      grid-row: 1/2;
+    }
+    &:nth-child(3) {
+      grid-column: 22/24;
+      grid-row: 1/2;
+    }
+    &:nth-child(4) {
+      grid-column: -15/-14;
+      grid-row: 2/3;
+    }
+    &:nth-child(5) {
+      grid-column: -14/-10;
+      grid-row: 2/3;
+    }
+    &:nth-child(6) {
+      grid-column: -11/-8;
+      grid-row: 2/3;
+      text-align: center;
+    }
+    &:nth-child(7) {
+      grid-column: -9/-4;
+      grid-row: 2/3;
+      text-align: center;
+    }
+    &:nth-child(8) {
+      grid-column: -4/-1;
+      grid-row: 2/3;
+      text-align: start;
+    }
+  }
+}
+@media (width >= 1200px) {
+  .navImg {
+    width: 7em;
+    height: 3em;
+  }
+  .icon {
+    display: inline-block;
+    font-size: x-large;
+    vertical-align: middle;
+  }
+  .supItems {
+    a,
+    button {
+      color: rgb(146, 145, 145);
+      font-size: medium;
+    }
+  }
+  .nav-cont {
+    display: grid;
+    grid-template-columns: repeat(24, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .items {
+    &:nth-child(1) {
+      grid-column: -25/-20;
+      grid-row: 1/3;
+    }
+    &:nth-child(2) {
+      grid-column: 20/23;
+      grid-row: 1/2;
+    }
+    &:nth-child(3) {
+      grid-column: 22/24;
+      grid-row: 1/2;
+    }
+    &:nth-child(4) {
+      grid-column: -12/-11;
+      grid-row: 2/3;
+    }
+    &:nth-child(5) {
+      grid-column: -11/-8;
+      grid-row: 2/3;
+    }
+    &:nth-child(6) {
+      grid-column: -9/-7;
+      grid-row: 2/3;
+      text-align: end;
+    }
+    &:nth-child(7) {
+      grid-column: -7/-3;
+      grid-row: 2/3;
+    }
+    &:nth-child(8) {
+      grid-column: -4/-2;
+      grid-row: 2/3;
+      text-align: start;
+    }
   }
 }
