--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ main {
   display: none;
   position: absolute;
   left: 0;
-  margin-top: -0.4em;
+  margin-top: -5px;
   text-align: center;
   z-index: 1;
   background-color: rgb(0, 0, 0);
@@ -136,12 +136,6 @@ main {
 
 .boton:hover {
   transform: scale(1.1) translateY(-5px);
-}
-
-@media (max-width: 576px) {
-  .h1-error {
-    font-size: 1.2rem;
-  }
 }
 
 #homeCarousel .carousel-item {
@@ -195,6 +189,18 @@ main {
   padding: 0.4rem 0.9rem;
   border-radius: 999px;
   backdrop-filter: blur(2px);
+}
+
+.banner {
+  .col-12{
+    padding: 0 !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .h1-error {
+    font-size: 1.2rem;
+  }
 }
 
 @media (min-width: 992px) {
