se agregaron imagenes + ventana modal con video e iamgenes del pruducto que indica la card, se centraton textos y botones de las mismas

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ main {
 }
 .cat-img {
   object-fit: cover;
-  transition: transform 0.5s ease;
+  transition: 0.5s ease;
   height: 100%;
 }
 .cat-card:hover .cat-img {
