--- a/css/style.css
+++ b/css/style.css
@@ -367,58 +367,92 @@ main {
 /* estilos para la pagina sobre nosotros */
 
 .imagen-container {
+  width: 400px;
+  height: 500px;
+  border-radius: 20px;
   position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  border-radius: 12px;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
+  padding: 2rem 1rem;
+  display: flex;
+  align-items: flex-end;
+  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.6);
+  transition: 0.5s ease-in-out;
 }
 
 .imagen-container img {
+  height: 100%;
   width: 100%;
   display: block;
   border-radius: 10px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
   transition: transform 0.5s;
 }
 
-.overplay {
-  height: 0;
-  width: 100%;
-  background: linear-gradient(transparent, #1c1c1c 58%);
-  border-radius: 10px;
+.imagen-container:hover {
+  transform: translateY(-20px);
+  transition: 700ms ease-in;
+  border-radius: 20px;
+}
+
+.imagen-container:before {
+  content: "";
   position: absolute;
   top: 0;
-  bottom: 0;
-  overflow: hidden;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(19, 16, 16, 0.5),
+    rgba(0, 0, 0, 0.1)
+  );
+  z-index: 2;
+  transition: 0.5s all;
+  opacity: 0;
+}
+
+.imagen-container:hover::before {
+  opacity: 1;
+  border-radius: 20px;
+}
+
+.overplay {
+  position: relative;
+  z-index: 3;
+  color: #fff;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s all;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 40px;
-  text-align: center;
-  font-size: 14px;
-  transition: height 0.5s;
-  color: white;
+}
+
+.overplay:hover {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .overplay h5 {
-  font-weight: 500;
-  margin-bottom: 5px;
-  margin-top: 80%;
-  font-family: "Poppins", sans-serif;
-  font-size: 30px;
-  letter-spacing: 2px;
+  margin: 0;
+}
+
+.overplay p {
+  letter-spacing: 1px;
+  font-size: 15px;
+  margin-top: 8px;
+  margin-bottom: 20px;
 }
 
 .imagen-container :hover img {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .imagen-container:hover .overplay {
   height: 100%;
-}
-
-.imagen-container:hover{
-  transform: translateY(-20px);
-  transition: 700ms ease-in;
+  width: 100%;
 }
