--- a/css/style.css
+++ b/css/style.css
@@ -376,6 +376,7 @@ main {
   align-items: flex-end;
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.6);
   transition: 0.5s ease-in-out;
+  cursor: pointer;
 }
 
 .imagen-container img {
@@ -388,6 +389,7 @@ main {
   top: 0;
   left: 0;
   transition: transform 0.5s;
+  border-radius: 20px;
 }
 
 .imagen-container:hover {
@@ -412,6 +414,7 @@ main {
   z-index: 2;
   transition: 0.5s all;
   opacity: 0;
+  border-radius: 20px;
 }
 
 .imagen-container:hover::before {
@@ -438,18 +441,19 @@ main {
 }
 
 .overplay h5 {
-  margin: 0;
+  margin-bottom: 15px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .overplay p {
   letter-spacing: 1px;
   font-size: 15px;
-  margin-top: 8px;
-  margin-bottom: 20px;
 }
 
 .imagen-container :hover img {
   transform: scale(1.2);
+  border-radius: 20px;
 }
 
 .imagen-container:hover .overplay {
