--- a/css/style.css
+++ b/css/style.css
@@ -447,3 +447,100 @@ main {
     }
   }
 }
+
+/* estilos para la pagina sobre nosotros */
+
+.imagen-container {
+  width: 400px;
+  height: 500px;
+  border-radius: 20px;
+  position: relative;
+  padding: 2rem 1rem;
+  display: flex;
+  align-items: flex-end;
+  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.6);
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.imagen-container img {
+  height: 100%;
+  width: 100%;
+  display: block;
+  border-radius: 10px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform 0.5s;
+  border-radius: 20px;
+}
+
+.imagen-container:hover {
+  transform: translateY(-20px);
+  transition: 700ms ease-in;
+  border-radius: 20px;
+}
+
+.imagen-container:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(19, 16, 16, 0.5),
+    rgba(0, 0, 0, 0.1)
+  );
+  z-index: 2;
+  transition: 0.5s all;
+  opacity: 0;
+  border-radius: 20px;
+}
+
+.imagen-container:hover::before {
+  opacity: 1;
+  border-radius: 20px;
+}
+
+.overplay {
+  position: relative;
+  z-index: 3;
+  color: #fff;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s all;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.overplay:hover {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.overplay h5 {
+  margin-bottom: 15px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.overplay p {
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+
+.imagen-container :hover img {
+  transform: scale(1.2);
+  border-radius: 20px;
+}
+
+.imagen-container:hover .overplay {
+  height: 100%;
+  width: 100%;
+}
